# orchestrator

./: .env-example  .gitignore  LISENCE  README.md  pyproject.toml
orchestrator/: agent.py  app.py
orchestrator/models/: base.py  group.py  task.py  user.py
orchestrator/services/: command_service.py  config_service.py  container_service.py  gpt_service.py  grounding_service.py  group_service.py  llm_provider.py  osatlas_service.py  processor_service.py  promt_service.py  providers.py  task_service.py  user_service.py
orchestrator/tests/: ProcessorServiceTest.py
